--- a/Lab05/.vscode/settings.json
+++ b/Lab05/.vscode/settings.json
@@ -3,7 +3,9 @@
 		"AimProject"
 	],
 	"java.project.outputPath": "bin",
-	"java.project.referencedLibraries": [],
+	"java.project.referencedLibraries": [
+		"test-lib\\**\\*.jar"
+	],
 	"java.format.settings.url": ".vscode/java-formatter.xml",
 	"[java]": {
 		"editor.insertSpaces": true
